feat: add layout

--- a/src/index.html
+++ b/src/index.html
@@ -1,37 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
+
   <title>Frontend Mentor | Age calculator app</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
+
 <body>
+  <div class="container">
+    <section class="calculator">
+      <form class="calculator__form form">
+        <div class="form__input-box">
+          <label class="form__label" for="day">Day</label>
+          <input class="form__input" type="text" name="day" placeholder="DD">
+        </div>
+        <div class="form__input-box">
+          <label class="form__label" for="month">Month</label>
+          <input class="form__input" type="text" name="month" placeholder="MM">
+        </div>
+        <div class="form__input-box">
+          <label class="form__label" for="year">Year</label>
+          <input class="form__input" type="text" name="year" placeholder="YYYY">
+        </div>
 
-  Day
-  DD
-
-  Month
-  MM
-
-  Year
-  YYYY
-
-  -- years
-  -- months
-  -- days
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+      </form>
+      <div class="calculator__btn-box">
+        <div class="calculator__line"></div>
+        <button class="calculator__btn"><img class="calculator__img" src="./images/icon-arrow.svg" alt=""></button>
+      </div>
+      <div class="calculator__date-container">
+        <p class="calculator__text"><span id="year">- -</span>years</p>
+        <p class="calculator__text"><span id="month">- -</span>months</p>
+        <p class="calculator__text"><span id="day">- -</span>days</p>
+      </div>
+    </section>
   </div>
 </body>
+
 </html>
