--- a/src/index.html
+++ b/src/index.html
@@ -14,24 +14,29 @@
 <body>
   <div class="container">
     <section class="calculator">
-      <form class="calculator__form form">
+      <form class="calculator__form form" id="form">
+
         <div class="form__input-box">
           <label class="form__label" for="day">Day</label>
           <input class="form__input" type="text" name="day" placeholder="DD">
+          <p class="form__error-message" id=""></p>
         </div>
         <div class="form__input-box">
           <label class="form__label" for="month">Month</label>
           <input class="form__input" type="text" name="month" placeholder="MM">
+          <p class="form__error-message"></p>
         </div>
         <div class="form__input-box">
           <label class="form__label" for="year">Year</label>
           <input class="form__input" type="text" name="year" placeholder="YYYY">
+          <p class="form__error-message"></p>
         </div>
 
       </form>
       <div class="calculator__btn-box">
         <div class="calculator__line"></div>
-        <button class="calculator__btn"><img class="calculator__img" src="./images/icon-arrow.svg" alt=""></button>
+        <button class="calculator__btn" id="btn"><img class="calculator__img" src="./images/icon-arrow.svg"
+            alt=""></button>
       </div>
       <div class="calculator__date-container">
         <p class="calculator__text"><span id="year">- -</span>years</p>
