feat: add full validation

--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,7 @@
           <input class="form__input" type="text" name="year" placeholder="YYYY">
           <p class="form__error-message"></p>
         </div>
-
+        <p id="error-msg" class="form__error-message"></p>
       </form>
       <div class="calculator__btn-box">
         <div class="calculator__line"></div>
