--- a/src/index.html
+++ b/src/index.html
@@ -15,22 +15,24 @@
   <div class="container">
     <section class="calculator">
       <form class="calculator__form form" id="form">
+        <div class="form__box-one">
+          <div class="form__input-box">
+            <label class="form__label" for="day">Day</label>
+            <input class="form__input" type="text" name="day" placeholder="DD">
+            <p class="form__error-message" id=""></p>
+          </div>
+          <div class="form__input-box">
+            <label class="form__label" for="month">Month</label>
+            <input class="form__input" type="text" name="month" placeholder="MM">
+            <p class="form__error-message"></p>
+          </div>
+          <div class="form__input-box">
+            <label class="form__label" for="year">Year</label>
+            <input class="form__input" type="text" name="year" placeholder="YYYY">
+            <p class="form__error-message"></p>
+          </div>
+        </div>
 
-        <div class="form__input-box">
-          <label class="form__label" for="day">Day</label>
-          <input class="form__input" type="text" name="day" placeholder="DD">
-          <p class="form__error-message" id=""></p>
-        </div>
-        <div class="form__input-box">
-          <label class="form__label" for="month">Month</label>
-          <input class="form__input" type="text" name="month" placeholder="MM">
-          <p class="form__error-message"></p>
-        </div>
-        <div class="form__input-box">
-          <label class="form__label" for="year">Year</label>
-          <input class="form__input" type="text" name="year" placeholder="YYYY">
-          <p class="form__error-message"></p>
-        </div>
         <p id="error-msg" class="form__error-message"></p>
       </form>
       <div class="calculator__btn-box">
